# HW_27

./: =  db.sqlite3  manage.py  pyproject.toml
HW_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options.py  0003_remove_ad_address_ad_category_ad_image_and_more.py  0004_alter_ad_options_selection.py
ads/urls/: ad.py  cat.py  selection.py
data/: ad.json  ads.json  categories.json  category.json  csv_convert.py  location.csv  location.json  user.json
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_email_and_more.py
users/urls/: location.py  user.py
