[tool.poetry]
name = "hw-27"
version = "0.1.0"
description = ""
authors = ["venediktova-kate <venediktova.kat@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
